[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive_coverage"
version = "0.1.0"
description = ""
authors = [
    { name = "Nguyen Minh Quang", email = "quangnm0564@gmail.com" }
]
readme = ""
requires-python = ">=3.10"
dependencies = [
    "imageio==2.37.0",
    "imageio-ffmpeg==0.6.0",
    "matplotlib==3.10.5",
    "networkx==3.4.2",
    "numpy==2.2.6",
    "PyYAML==6.0.2",
    "scipy==1.15.3",
    "shapely==2.1.1",
]
